--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.application.name=account-service
 server.port=8200
 # eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=validate
