--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/user_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=validate
+
+#show sql statement
+logging.level.org.hibernate.SQL=debug
+#show sql values
+logging.level.org.hibernate.type.descriptor.sql=trace
